--- a/main.html
+++ b/main.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+
+	<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fbeautiful-elephant&psig=AOvVaw3yGnYVsKhaZlkP6qqLK6-P&ust=1676635814061000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCKCapKKBmv0CFQAAAAAdAAAAABAE" alt="Its an Elephant">
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
