--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 
-	<img src="elephant.jpg" alt="Its an Elephant">
+	<img src="https://media.istockphoto.com/id/1308154442/photo/elephant-mother-and-calf.jpg?s=612x612&w=0&k=20&c=ZyDpZpylxLq_B-JBRlcmc2gU1t1hpgxOvbeCeQV0tGs=" alt="Its an Elephant">
 	<script type="text/javascript" src="./script.js">
 </script>
 
